se agrega enpoint para crear y unirse a partidos
